# 5-topological-sector

./: .gitignore  AGENTS.md  CITATION.cff  CLAIMS.md  CONVENTIONS.md  DECISION_LOG.md  GATES.md  HANDOFF.md  LICENSE  MIGRATION.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  gate.yml  paper-sync.yml
.github/workflows/: ci.yml
archive/: LEGACY_KAPPA_C2A.md  README.md
archive/p5-omega-01/: ADAPTATION_DIFF.md  README.md
derivations/: README.md
derivations/c2a/: README.md  diagram_classes.md  exact_kappa_derivation.md  legacy_spec.md
derivations/goldstone-wilczek/: derivation.md
docs/: BRANCHING_POLICY.md  RESEARCH_WORKFLOW.md  RESULT_SCHEMA.md
migration/: KAPPA_C2A_INVENTORY.md
paper/: README.md  paper5_internal_dimension_v0_22.tex  paper5_internal_dimension_v0_23.tex  paper5_internal_dimension_v0_24.tex
results/: README.md
results/c2a/: PROVENANCE.md  README.md  environment.txt  verdict.md
results/goldstone-wilczek/: PROVENANCE.md  README.md  environment.txt  verdict.md
results/p5-omega-01/: PROVENANCE.md  environment.txt
reviews/: README.md
reviews/claude/: 2026-07-16-c2a.md  2026-07-16-p5-omega-01.md
scripts/: README.md  __init__.py
scripts/c2a/: README.md  __init__.py  aggregate.py  derive_classes.py  derive_kappa_closed.py  p4_gate.py  p6_check.py  p7_slope.py  production_scan.py  pv_check.py  skyrme_fast.py  skyrme_full.py  skyrme_sign2.py  (+1 more)
tests/: README.md  test_governance_status.py  test_p5_omega_01.py  test_repository_structure.py
(+40 files in other folders)
