[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "topological-sector-research"
version = "0.0.0"
description = "Research infrastructure for Paper 5"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
